[noartf] - fix a lot of things
- videos overlaping everything fixed
- videos layoyt improved
- header leaves a gap on the top of the page in landscape orientation fixed
- horrible page title color changed, title changes color based on if it is sticked or not
- npm version updated
- tmp crapy backend mock ignored

--- a/src/main/webapp/scss/_alcMain.scss
+++ b/src/main/webapp/scss/_alcMain.scss
@@ -29,7 +29,7 @@ html, body {
 
     &.alc-massive-header {
         @media screen and (orientation: portrait) {
-            margin-top: $massivity;
+            margin-top: $massivity + $alc-nav-height;
         }
     }
     @media screen and (orientation: landscape) {
